--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 layout: home
 ---
 
+{%- assign content = site.posts.first.content -%}
+
+
+<h2>Other posts</h2>
 <ul>
   {% for post in site.posts %}
   <li>
-    <h1>
       <a href="{{ post.url }}">{{ post.title }}</a>
-    </h1>
-    {{ post.excerpt }}
   </li>
   {% endfor %}
 </ul>
