feat(theme): Add custom post layout

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 layout: home
 ---
 
-{%- assign content = site.posts.first.content -%}
+{%- assign recent_post = site.posts.first -%}
 
+<h1>{{ recent_post.title }}</h1>
+<p>{{ recent_post.date | date_to_string }} - {{ recent_post.author }}</p>
+{{ recent_post.content }}
 
 <h2>Other posts</h2>
 <ul>
